--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script src="js/Bullet.js"></script>
 	<script src="js/Collision.js"></script>
 	<script src="js/Enemy.js"></script>
+	<script src="js/Boss.js"></script>
 	<script src="js/Game.js"></script>
 	<script src="js/main.js"></script>
 </body>
